# synapse

./: .gitignore  LICENSE  README.md  pyproject.toml
synapse/: __init__.py  autowatch.py  cli.py  discord_notify.py  memory.py  orchestrator.py  protocol.py  watcher.py  wrap.py
synapse/agents/: __init__.py  base.py  coder.py  operator.py  researcher.py
