[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse"
version = "0.1.0"
description = "See what Claude Code is doing when your orchestrator delegates to it"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
synapse = "synapse.cli:main"
synapse-wrap = "synapse.wrap:main"

[project.urls]
Homepage = "https://github.com/metahubaifeel/synapse"
Repository = "https://github.com/metahubaifeel/synapse"

authors = [
    { name = "Ethan Yeang" },
]

[tool.hatch.build.targets.wheel]
packages = ["synapse"]
